[tool.poetry]
name = "memiter"
version = "0.1.0"
description = "A generator that extends the functionality of a generator. simplifying pagination and data access."
authors = ["Udi Shalev <azsd91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
